resonsive bleed fix

--- a/style.css
+++ b/style.css
@@ -86,5 +86,6 @@ footer{
 @media(max-width: 625px){
 	body{
 		font-size: 90%;
+		padding:0 5%;
 	}
 }
